[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/sounds/flashlight-on.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/menus/HoverButton.gd" type="Script" id=3]
[ext_resource path="res://assets/resources/theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/sounds/slime-2.wav" type="AudioStream" id=5]

[node name="HoverButton" type="Button"]
anchor_right = 1.0
margin_bottom = 12.0
theme = ExtResource( 4 )
text = "YO"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -12, -3 )
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 48, 0, 16, 16 )

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="mouse_entered" from="." to="." method="_on_HoverButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_HoverButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_HoverButton_pressed"]
[connection signal="finished" from="ClickSound" to="." method="_on_ClickSound_finished"]
